Add basic image upload with validation, optimization and finish basic Event model.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,19 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @event.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @event.description %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @event.user.email %>
-</p>
+<div>
+  <%= render @event %>
+</div>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
