Successfully add non-working Attend and UnAttend buttons
Sepererated user roles in 'creator' and 'attendee', similarly now there are two event types, 'created_event' and 'attended_event'

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,9 @@
             <%= @user.email %>
         </h1>
     </section>
+  <section class="stats">
+    <%= render 'stats' %>
+  </section>
 </div>
 <div>
     <% if @user.events.any? %>
