--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -3,12 +3,12 @@
   <span><strong><%= event.title %></strong></span>
   <span><%= event.description %></span>
   <span><%= image_tag event.picture.url if event.picture? %></span>
-  <span><%= event.user.email %></span>
+  <span><%= event.creator.email %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(event.created_at) %> ago.
   </span>
   <span><%= link_to 'Show', event %></span>
-  <% if current_user == event.user %>
+  <% if current_user == event.creator %>
     <span><%= link_to 'Edit', edit_event_path(event) %></span>
     <span><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></span>
   <% end %>
