--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,6 +2,7 @@
 
 <div>
   <%= render @event %>
+  <%= render 'events/attend_event_form' %>
 </div>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
