--- a/app/views/events/_attend.html.erb
+++ b/app/views/events/_attend.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(current_user.attendance_relations.build) do |f| %>
+<%= form_for(current_user.attendance_relations.build, remote: true) do |f| %>
     <div><%= hidden_field_tag :attended_event_id, @event.id %></div>
-    <%= f.submit "Attend" %>
+    <%= f.submit 'Attend' %>
 <% end %>
