--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,6 +21,16 @@
       <%= f.text_area :description %>
     </div>
 
+    <div class="field">
+      <%= f.label :start_date %>
+      <%= f.date_field :start_date %>
+    </div>
+
+    <div class="field">
+      <%= f.label 'Category' %><br>
+      <%= f.collection_select :event_category_id, EventCategory.all, :id, :name %>
+    </div>
+
     <span class="picture">
     <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
   </span>
