Add foundation-rails and devise-foundation-views gem without foundation views

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require foundation_and_overrides
+# SCSS
+*= require devise_foundation_views_scss
  */
