Finish preliminary setup of Filterrific gem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,12 @@
 # SCSS
 *= require devise_foundation_views_scss
  */
+
+/* Pull in bootstrap */
+@import 'bootstrap';
+
+/* Import any app style files below this line */
+@import 'bootstrap-datepicker3.css';
+
+@import 'components/filterrific_filter';
+@import 'components/chardinjs_overrides.css';
