--- a/app/views/events/_unattend.html.erb
+++ b/app/views/events/_unattend.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(current_user.attendance_relations.find_by(attended_event_id: @event.id),
              html: { method: :delete },
              remote: true) do |f| %>
-    <%= f.submit 'UnAttend' %>
+    <%= f.submit 'UnAttend', class: 'rsvp button' %>
 <% end %>
