--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -51,3 +51,17 @@
 //
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
+table tr {
+  background-color: transparent !important;
+}
+
+.title-bar {
+  border: none;
+}
+
+#reset-filters {
+  padding: 5px;
+  padding-left: 15px;
+}
+
