--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,19 +1,58 @@
+<div class="row">
+  <div class="small-9 columns small-centered ">
+    <span><%= image_tag event.picture.url if event.picture? %></span>
+    <div class="event text-center">
 
-<li>
-  <span><h4><%= event.title %></h4></span><br/>
-  <span><%= event.description %></span>
-  <span><%= image_tag event.picture.url if event.picture? %></span>
-  <span><%= event.creator.email %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(event.created_at) %> ago.
-  </span>
-  <br/>
-  <span id="attendee_count"><%= event.attendees.count %></span><span> Attendees</span></span>
-  <br/>
-  <span><%= link_to 'Show', event %></span>
-  <% if current_user == event.creator %>
-      <span><%= link_to 'Edit', edit_event_path(event) %></span>
-      <span><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></span>
-  <% end %>
-</li>
+      <% if event.start_date? %>
+        <div class="event-date">
+              <p class="event-month"><%= event.start_date.strftime("%B") %></p>
+              <p class="event-day"><%= event.start_date.strftime("%d") %></p>
+        </div>
+      <% end %>
+
+      <div>
+        <%= render 'events/attend_event_form' %>
+      </div>
+      <div class="event-desc">
+        <h4 class="event-desc-header"><%= event.title %></h4>
+        <p class="event-desc-detail"><span class="event-desc-time"></span><%= event.description %></p>
+      </div>
+    </div>
+
+    <div class="row event-info-div">
+      <div class="medium-2 large-2 columns">
+        <span class="label" >
+          <span id="attendee_count"><%= event.attendees.count %></span><span> Attendees</span>
+        </span>
+      </div>
+
+      <div class="medium-3 large-3 columns">
+        <span class="label">
+           Posted <%= time_ago_in_words(event.created_at) %> ago
+        </span>
+      </div>
+
+      <div class="medium-2 large-2 columns end">
+        <span class="label">
+           <%= event.event_category.name if event.event_category %>
+        </span>
+      </div>
+
+    </div>
+    <hr>
+    <div class="row">
+      <div class="medium-4 large-4 columns">
+        <span class="label success">Created by: <%= link_to event.creator.email, user_path(event.creator) %></span>
+        <% if current_user == event.creator %>
+            <span><%= link_to 'Edit', edit_event_path(event) %></span>
+            <span><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+        <% end %>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+
 
