--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,31 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DiscoverIt - An Events & Interests Discovery App</title>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
+  <div data-sticky-container>
+    <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%">
+        <div class="title-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li style="color: white"><%= link_to 'DiscoverIt', events_path, class: 'menu-text' %></li>
+          </ul>
+        </div>
+        <div class="title-bar-right">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li id="new-event-button">
+              <%= link_to 'New Event', new_event_path %>
+            </li>
+            <li><%= link_to 'Events', events_path %></li>
+            <li>
+              <a href="#">Account</a>
+              <ul class="menu vertical">
 
+                <% if user_signed_in? %>
+                    <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+                    <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+                <% else %>
+                    <li><%= link_to 'Sign in', new_user_session_path %></li>
+                    <li><%= link_to 'Sign up', new_user_registration_path %></li>
+                <% end %>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+    </div>
+  </div>
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
-      <% if user_signed_in? %>
-          <li><%= link_to "Edit profile", edit_user_registration_path %></li>
-          <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
-      <% else %>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
-      <% end %>
+
       <%= yield %>
     </div>
-
+  <script>
+      $(document).foundation();
+  </script>
   </body>
 </html>
