--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -26,7 +26,7 @@
             </label>
 
             <label>Start Date
-              <%= f.date_select :start_date %>
+              <%= f.text_field :start_date, id: 'datepicker-new-event' %>
             </label>
 
             <label>Category for the Event
@@ -50,5 +50,16 @@
         if (size_in_megabytes > 5) {
             alert('Maximum file size is 5MB. Please choose a smaller file.');
         }
+    });
+
+    $(function(){
+        $('#datepicker-new-event').fdatepicker({
+            format: 'dd-mm-yyyy',
+            disableDblClickSelection: true,
+            leftArrow:'<<',
+            rightArrow:'>>',
+            closeIcon:'X',
+            closeButton: true
+        });
     });
 </script>
