--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -45,13 +45,8 @@
 <script>
     $(function(){
         $('#datepicker').fdatepicker({
-            initialDate: '02-12-1989',
             format: 'mm-dd-yyyy',
-            disableDblClickSelection: true,
-            leftArrow:'<<',
-            rightArrow:'>>',
-            closeIcon:'X',
-            closeButton: true
+            disableDblClickSelection: true
         });
     });
 </script>
