--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -10,6 +10,25 @@
     </div><br />
 <% end -%>
 
+<div id="social-links">
+  <%- if devise_mapping.omniauthable? %>
+      <%- resource_class.omniauth_providers.each do |provider| %>
+          <% if OmniAuth::Utils.camelize(provider) == 'Facebook' %>
+              <%= link_to omniauth_authorize_path(resource_name, provider) do %>
+                  <i class="fa fa-facebook fa-2x"></i>
+              <% end %>
+          <% end %>
+          <% if OmniAuth::Utils.camelize(provider) == 'GoogleOauth2' %>
+              <%= link_to omniauth_authorize_path(resource_name, provider) do %>
+                  <i class="fa fa-google fa-2x"></i>
+              <% end %>
+          <% end %>
+      <% end -%>
+  <% end -%>
+</div>
+
+<br />
+
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end -%>
@@ -22,8 +41,4 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end -%>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end -%>
-<% end -%>
+
